# oxygen

./: .gitignore  CMakeLists.txt  Makefile  README.md  clean.sh  cmake_test.sh  make_test.sh  test.sh
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt  close.c  lseek.c  main.c  mini_lib.h  mini_libc_entry.S  mmap.c  open.c  test_mini_lib.c  util.c  util.h  write.c
